# PelePhysics

./: .buildinfo  .codespell-ignore-words  .codespellrc  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Ceptr.html  Chemistry.html  CvodeInPP.html  DeveloperGuide.html  EOS.html  Equations.rst  GettingStarted.html  GettingStarted.rst  Introduction.html  IntroductionToCvode.html  Models.rst  QSS.html  README.md  Soot.html  SootInputs.rst  Spray.html  SprayInputs.rst  Support.html  Thermodynamics.html  Transport.html  Tutorials.html  Utility.html  Verification.rst  conf.py  genindex.html  index.html  index.rst  legal.txt  license.txt  objects.inv  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: EOS.yml  Formatting.yml  Pythia.yml  Reaction.yml  Transport.yml  ci.yml  cleanup-cache.yml  docs.yml
CMake/: PelePhysicsConfig.cmake.in
Docs/: CMakeLists.txt
Docs/cvode/source/: CvodeInPP.rst  Doc_COVO.tex  GettingStarted.rst  Introduction.rst  IntroductionToCvode.rst  QSS.rst  Tutorials.rst  conf.py  index.rst
Docs/sphinx/: Ceptr.rst  Chemistry.rst  CvodeInPP.rst  DeveloperGuide.rst  Doc_COVO.tex  EOS.rst  GettingStarted.rst  Introduction.rst  QSS.rst  Soot.rst  Spray.rst  Support.rst  Thermodynamics.rst  Transport.rst  Tutorials.rst  Utility.rst  conf.py  index.rst
Docs/sphinx/_static/: mywrap.css
Eos/: CMakeLists.txt  EOS.H  EOS.cpp  EosParams.H  Fuego.H  GammaLaw.H  Make.package  Manifold.H  ManifoldFunc.H  NeuralNet.H  NeuralNetHomerolled.H  NeuralNetLayerDef.H  NeuralNetModelDef.H  README  SRK.H  Table.H  eos_type.H  eos_type.f90  eos_type_cpp.H
Eos/F90/: eos_type.f90
Eos/Fuego/: EOS.H  EOS.cpp  Fuego_EOS.H  Fuego_EOS.cpp  Make.package  eos.F90  eos.H
Eos/GammaLaw/: EOS.H  EOS.cpp  _parameters  eos.F90
Eos/Peng-Robinson/: actual_eos.F90
Eos/Soave-Redlich-Kwong/: EOS.H  EOS.cpp  eos.F90
MP-docs/: Equations.rst  GettingStarted.rst  Verification.rst
MechanismPAH/: README.rst  addPAHmech.py  cleanfiles.py  compareIDT.py  getdata.py
Mechanisms/: Make.package  converter.sh  list_mech
Mechanisms/Aromatic_KrNara/: mechanism.cpp  (+1 more)
PP_Spray/: Drag.H  Make.package  SprayDerive.cpp  SprayFuelData.H  SprayIO.cpp  SprayInjectTemplate.H  SprayInjection.H  SprayInterpolation.H  SprayJet.H  SprayJet.cpp  SprayParticles.H  SprayParticles.cpp  SprayRefl.cpp  SprayReflData.H  SpraySB.cpp  SpraySetup.cpp  SprayWalls.H  SprayWalls.cpp  Spray_F.H  WallFunctions.H  control_parameters.f90  drag_2d.f90  drag_3d.f90  drag_F.H  fuel_properties.f90  particle_mod.f90  spray.f90
Reactions/: AMReX_SUNMemory.H  AMReX_SUNMemory.cpp  CMakeLists.txt  Make.package  README.md  ReactorArkode.H  ReactorArkode.cpp  ReactorBDF.H  ReactorBDF.cpp  ReactorBDFsolver.H  ReactorBase.H  ReactorBase.cpp  ReactorCvode.H  ReactorCvode.cpp  ReactorCvodeCustomLinSolver.H  ReactorCvodeCustomLinSolver.cpp  ReactorCvodeJacobian.H  ReactorCvodeJacobian.cpp  ReactorCvodePreconditioner.H  ReactorCvodePreconditioner.cpp  ReactorCvodeUtils.H  ReactorCvodeUtils.cpp  ReactorNull.H  ReactorNull.cpp  ReactorRK64.H  ReactorRK64.cpp  ReactorTypes.H  ReactorUtils.H  ReactorUtils.cpp  _parameters  network.f90  react_type.F90  reactor.F90  reactor.H  reactor.cpp  reactor_utilities.H
Soot_Models/: Constants_Soot.H  Make.package  SootData.H  SootModel.H  SootModel.cpp  SootModel_derive.H  SootModel_derive.cpp  SootModel_react.cpp  SootModel_setup.cpp  SootReactions.H
Source/: CMakeLists.txt  Factory.H  Make.package  PeleParamsGeneric.H  PelePhysics.H  PelePhysicsConstraints.H  PhysicsConstants.H
Spray/: Make.package  SprayFuelData.H  SprayJet.H  WallFunctions.H
Support/Fuego/Pythia/: README  README.md  pyproject.toml  setup.csh  setup.sh
Support/Fuego/Pythia/products/etc/fuego/mechanisms/: GRIMech-1.2.ck2  Leeds-CH4-1.2.ck2  Leeds-S.ck2  fujii.ck2  lindst.ck2  reactions-0005.ck2  reactions-0011.ck2  reactions-0012.ck2  test-mech.ck2  wang_99.ck2
Support/Fuego/Pythia/pythia-0.4/: Make.mm
Support/Fuego/Pythia/pythia-0.4/applications/beomon/: beomon.py  nodemon.py
Support/Fuego/Pythia/pythia-0.4/applications/beomon/cacr/: mond.c  mond.h  monitor  tx
Support/Fuego/Pythia/pythia-0.5/applications/: Make.mm
Support/Fuego/Pythia/pythia-0.5/applications/beomon/: beomon.py  nodemon.py
Support/Fuego/Pythia/pythia-0.5/applications/beomon/cacr/: Makefile  README  nodeprobe.c  nodestat  xnodemon
Support/ceptr/: .flake8  README.rst  checkProfile.sh  disableAllProfile.sh  gen.sh  gen_qss.sh  makeQss.sh  makeQss_gpu.sh  makeQss_prof.sh  makeQss_readable.sh  makeQss_simple.sh  makeQss_toml.sh  pyproject.toml  qssa_input.toml  reenableAllProfile.sh
Support/ceptr/Kolla/: mechanism.H  mechanism.cpp
Support/ceptr/ceptr/: __init__.py  __main__.py  ceptr.py  ck.py  constants.py  converter.py  debug.py  dummySymJac.py  formatter.py  gjs.py  inputs.py  jacobian.py  optional_mpi.py  production.py  progressBar.py  progress_bar.py  qssa.py  qssa_converter.py  qssa_graphs.py  qssa_info.py  qssa_reduction.py  reaction_info.py  sparsity.py  species_info.py  symbolicMath.py  symbolic_math.py  thermo.py  transport.py  utilities.py  writer.py
Support/ceptr/tests/: __init__.py  test_ceptr.py  test_regression.py
Testing/Exec/Radiation/: CMakeLists.txt  tstPOneMulti.cpp  tstPOneMultiAF.cpp  tstPOneMultiEB.cpp  tstPOneSingle.cpp  tstPOneSingleAF.cpp  tstPOneSingleEB.cpp
Testing/Exec/Radiation/inputs/: inputs.tstPOneMulti  inputs.tstPOneMultiAF  inputs.tstPOneMultiAFLevbyLev  inputs.tstPOneMultiEB  inputs.tstPOneMultiLevbyLev  inputs.tstPOneSingle  inputs.tstPOneSingleAF  inputs.tstPOneSingleEB
Transport/: CMakeLists.txt  Constant.H  Make.package  Simple.H  Sutherland.H  Transport.H  Transport.cpp  TransportParams.H  TransportTypes.H  Transport_F.H  transport.F90  transport_type.f90
Utility/: FF-CANTERA_wPMF.py  Make.package  pmf.H  pmf.cpp  pmf_data.H  pmf_data.cpp  pmf_f2dat.py  turbinflow.H  turbinflow.cpp
_sources/: CvodeInPP.rst.txt  EOS.rst.txt  Introduction.rst.txt  IntroductionToCvode.rst.txt  Support.rst.txt  Utility.rst.txt  index.rst.txt
_static/: documentation_options.js
(+1426 files in other folders)
