[tool.poetry]
name = "ceptr"
version = "0.1.0"
description = ""
authors = ["Marc Henry de Frahan <marc.henrydefrahan@nrel.gov>", "Lucas Esclapez", "Jon Rood", "Hari Sitaraman", "Marc Day", "Anne Felden", "Julia Ream", "Malik Hassanaly"]

[tool.poetry.dependencies]
python = "^3.8"
Cantera = ">=2.6.0b2"
Pint = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3"}
isort = "^5.9.3"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
pep8-naming = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
convert = "ceptr.ceptr:main"

[tool.black]
line-length = 79
target-version = ['py38']
preview-string-processing = true
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
