[tool.poetry]
name = "ceptr"
version = "0.1.0"
description = ""
authors = ["Marc Henry de Frahan <marc.henrydefrahan@nrel.gov>", "Lucas Esclapez", "Jon Rood", "Hari Sitaraman", "Marc Day", "Anne Felden", "Julia Ream", "Malik Hassanaly", "Nick Wimer"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Cantera = ">=3.0.0"
Pint = "^0.19.2"
PyYAML = "^6.0.1"
networkx = "^2.8.8"
matplotlib = "^3.7.2"
scipy = "^1.11.2"
numpy = "^1.25.2"
sympy = "^1.12"
symengine = "^0.9.2"
pandas = ">=2.0.3"
toml = ">=0.10.2"
mpi4py = {version = "^3.1.5", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = {version = "^23.7.0"}
isort = "^5.12.0"
ipython = "^8.14.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.12.6"
pep8-naming = "^0.12.1"
flake8-docstrings = "^1.7.0"
flake8-use-fstring = "^1.4"
flynt = "^0.77"

[tool.poetry.extras]
mpi = ["mpi4py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
convert = "ceptr.ceptr:main"
qssa = "ceptr.qssa:main"

[tool.black]
line-length = 88
target-version = ['py310']
preview = true
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]